// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio rtl render component should be rendered correctly in RTL direction 1`] = `
<label
  class="ezd-radio-wrapper ezd-radio-wrapper-rtl"
>
  <span
    class="ezd-radio"
  >
    <input
      class="ezd-radio-input"
      type="radio"
    />
    <span
      class="ezd-radio-inner"
    />
  </span>
</label>
`;

exports[`Radio rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="ezd-radio-group ezd-radio-group-outline ezd-radio-group-rtl"
/>
`;

exports[`Radio rtl render component should be rendered correctly in RTL direction 3`] = `
<label
  class="ezd-radio-button-wrapper ezd-radio-button-wrapper-rtl"
>
  <span
    class="ezd-radio-button"
  >
    <input
      class="ezd-radio-button-input"
      type="radio"
    />
    <span
      class="ezd-radio-button-inner"
    />
  </span>
</label>
`;

exports[`Radio should render correctly 1`] = `
<label
  class="ezd-radio-wrapper customized"
>
  <span
    class="ezd-radio"
  >
    <input
      class="ezd-radio-input"
      type="radio"
    />
    <span
      class="ezd-radio-inner"
    />
  </span>
  <span>
    Test
  </span>
</label>
`;
